Add caching support and enhance product data validation